--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "typescript": "^5.0.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
