--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npm i --production && npx tsc --outDir dist src/app/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node out/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q out/app/index.js\""
