--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm i --production && npx tsc --outDir dist src/app/index.ts",
+    "build": "npm i --omit=dev && npx tsc  ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node out/index.js",
+    "start": "node out/app/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q out/app/index.js\""
   },
   "author": "",
